# Recon-Superpowers

./: .gitignore  FEATURE_ENHANCEMENTS.md  README.md  SECURITY_AUDIT.md  categorize_workflows.py  install_linux.sh  install_windows.ps1  pyproject.toml  recon_superpower.py  requirements-dev.txt
.github/workflows/: build.yml  ci.yml
recon_superpower/: __init__.py  __main__.py  app.py
recon_superpower/config/: __init__.py  defaults.py  settings.py
recon_superpower/core/: __init__.py  validators.py
recon_superpower/features/: __init__.py
recon_superpower/tools/: __init__.py
recon_superpower/ui/: __init__.py  theme.py
recon_superpower/utils/: __init__.py  logger.py  security_logger.py
tests/: __init__.py  test_config.py  test_logger.py  test_validators.py
