[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-superpower"
version = "3.3.0"
description = "Professional GUI wrapper for security reconnaissance tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Recon Superpower Team"}
]
keywords = ["security", "reconnaissance", "penetration-testing", "gui", "nmap", "gobuster"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "isort>=5.12",
]
gui = [
    "pillow>=9.0",
    "cairosvg>=2.5",
]

[project.scripts]
recon-superpower = "recon_superpower.app:main"

[project.urls]
Homepage = "https://github.com/aingram702/Recon-Superpowers"
Repository = "https://github.com/aingram702/Recon-Superpowers"
Issues = "https://github.com/aingram702/Recon-Superpowers/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["recon_superpower*"]

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "security: marks tests as security-related (run with -m security)",
    "slow: marks tests as slow (deselect with -m 'not slow')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================

[tool.coverage.run]
source = ["recon_superpower"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true

# =============================================================================
# MYPY CONFIGURATION
# =============================================================================

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "tkinter.*",
    "PIL.*",
    "cairosvg.*",
]
ignore_missing_imports = true

# =============================================================================
# RUFF CONFIGURATION (Fast Python Linter)
# =============================================================================

[tool.ruff]
target-version = "py38"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "TRY",    # tryceratops
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use of assert (OK in tests)
    "S603",   # subprocess call - check for trusted input (we validate)
    "S607",   # Start process with partial path (intentional for tools)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
    "TRY003", # Long exception messages
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Assert is fine in tests
    "ARG001", # Unused function argument (fixtures)
    "ARG002", # Unused method argument
    "PLR2004", # Magic values in tests
]
"recon_superpower.py" = [
    "PLR0915", # Too many statements (legacy file)
    "PLR0912", # Too many branches
    "C901",    # Too complex
]

[tool.ruff.lint.isort]
known-first-party = ["recon_superpower"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# BLACK CONFIGURATION
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | __pycache__
    | dist
    | build
)/
'''

# =============================================================================
# ISORT CONFIGURATION
# =============================================================================

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["recon_superpower"]
skip_gitignore = true
